--- a/backbonetodo/todo/templates/todo/index.html
+++ b/backbonetodo/todo/templates/todo/index.html
@@ -18,7 +18,7 @@
              <div class="view">
                  <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
                  <label><%- title %></label>
-                 <input class="edit" value="<%- title %>">
+                 <input class="edit" type="text" value="<%- title %>">
                  <button class="destroy">remove</button>
              </div>
           </script>
