--- a/backbonetodo/todo/templates/todo/base.html
+++ b/backbonetodo/todo/templates/todo/base.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src={% static 'todo/scripts/lib/jquery.min.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/lib/underscore-min.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/lib/backbone-min.js' %}></script>
-    <script type="text/javascript" src={% static 'todo/scripts/lib/backbone.localStorage-min.js' %}></script>
+    <script type="text/javascript" src={% static 'todo/scripts/lib/tastypie.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/app.js' %}></script>
 
 </html>
