Implement todo list using backbone and tastypie api

--- a/backbonetodo/todo/templates/todo/base.html
+++ b/backbonetodo/todo/templates/todo/base.html
@@ -8,6 +8,7 @@
         <meta charset="UTF-8" />
         <!-- TYPE -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href={% static 'todo/css/style.css' %} />
 
         <!-- STYLES -->
 
@@ -25,7 +26,6 @@
     <script type="text/javascript" src={% static 'todo/scripts/lib/jquery.min.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/lib/underscore-min.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/lib/backbone-min.js' %}></script>
-    <script type="text/javascript" src={% static 'todo/scripts/lib/tastypie.js' %}></script>
     <script type="text/javascript" src={% static 'todo/scripts/app.js' %}></script>
 
 </html>
